data/test/type_check/fail/array_2.v
// Little-endian declaration
wire x[0:7];
